# NeuroSpider

./: .gitignore  .travis.yml  INSTALL  LICENSE  NeuroSpider.cabal  debian-dependencies.txt  main.glade  stack.yaml
data/: main.css  main.glade  main.js
src/: Main.hs
src/NeuroSpider/: Graph.hs  GraphViz.hs  Gtk.hs  Gui.hs  Paths.hs  UiManager.hs  XML.hs
src/NeuroSpider/Util/: GraphViz.hs  Gtk.hs  Reactive.hs  ReactiveGtk.hs  XML.hs
