name:                NeuroSpider
version:             0
license-file:        LICENSE
author:              Pavel Kogan
maintainer:          pkogan@gmail.com
build-type:          Simple
cabal-version:       >=1.10
data-dir:            data
data-files:          *.glade *.css *.js

executable NeuroSpider
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
                       RecordWildCards
  other-modules:       Paths_NeuroSpider
                       NeuroSpider.Gui
                       NeuroSpider.Util.GraphViz
                       NeuroSpider.Util.Gtk
                       NeuroSpider.Util.Reactive
                       NeuroSpider.Util.ReactiveGtk
                       NeuroSpider.Util.XML
  build-depends:       base >=4.6 && <4.7,
                       gtk >=0.12 && <0.13,
                       webkit >=0.12 && <0.13,
                       transformers >=0.3 && <0.4,
                       containers,
                       fgl,
                       text,
                       strict,
                       graphviz,
                       conduit,
                       xml-conduit,
                       xml-conduit-writer,
                       xml-types,
                       reactive-banana
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

