name:                NeuroSpider
version:             0
license:             BSD3
license-file:        LICENSE
author:              Pavel Kogan
maintainer:          pkogan@gmail.com
build-type:          Simple
cabal-version:       >=1.10
data-dir:            data
data-files:          *.glade *.css *.js

executable NeuroSpider
  main-is:             Main.hs
  other-modules:       Paths_NeuroSpider
                       NeuroSpider.Gui
                       NeuroSpider.Graph
                       NeuroSpider.Util.GraphViz
                       NeuroSpider.Util.Gtk
                       NeuroSpider.Util.Reactive
                       NeuroSpider.Util.XML
  build-depends:       base >=4.6 && <4.8,
                       gtk >=0.12 && <0.13,
                       webkit >=0.12 && <0.13,
                       transformers >=0.3 && <0.4,
                       parsec,
                       containers,
                       mtl,
                       fgl,
                       text,
                       data-default,
                       strict,
                       safe,
                       graphviz,
                       conduit,
                       xml-conduit,
                       xml-conduit-writer,
                       xml-types,
                       reactive-banana-gtk,
                       reactive-banana
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

