name:                NeuroSpider
version:             0
synopsis:            Graph-based SRS
description:         A tool to explore and memorise information in graph form
category:            Application
license:             BSD3
license-file:        LICENSE
author:              Pavel Kogan
maintainer:          pkogan@gmail.com
build-type:          Simple
cabal-version:       >=1.10
data-dir:            data
data-files:          *.glade *.css *.js

source-repository head
  type:                git
  location:            git://github.com/pavelkogan/NeuroSpider

executable NeuroSpider
  main-is:             Main.hs
  other-modules:       Paths_NeuroSpider
                       NeuroSpider.Gui
                       NeuroSpider.Graph
                       NeuroSpider.GraphViz
                       NeuroSpider.Gtk
                       NeuroSpider.Paths
                       NeuroSpider.UiManager
                       NeuroSpider.XML
  build-depends:       base >=4.6 && <4.8,
                       gtk >=0.13 && <0.14,
                       webkit >=0.13 && <0.14,
                       transformers >=0.3 && <0.4,
                       system-filepath,
                       basic-prelude,
                       bytestring,
                       parsec,
                       containers,
                       mtl,
                       fgl,
                       text,
                       data-default-generics,
                       strict,
                       safe,
                       graphviz,
                       conduit,
                       xml-conduit,
                       xml-conduit-writer,
                       xml-types,
                       reactive-banana-gtk,
                       reactive-banana
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       LambdaCase
                       TupleSections
                       ExtendedDefaultRules

